--- a/client/src/styles/About.css
+++ b/client/src/styles/About.css
@@ -1,25 +1,6 @@
-.card {
-    max-width: 300px;
-    max-height: 380px;
-    border-radius: 4px;
-    background-color: #1b1b1b;
-    cursor: pointer;
-    transition: all 0.2s;
+.about-h1 {
+    background-color: blueviolet;
 }
-
-.card:hover {
-    opacity: 0.8;
-}
-
-.card .img-wrapper {
-    width: auto;
-}
-
-.card img {
-    width: 100%;
-    height: 200px;
-}
-
-.card .info-wrapper {
-    padding: 1em;
+.about-h3 {
+    background-color: aqua;
 }
