--- a/client/src/styles/Cards.css
+++ b/client/src/styles/Cards.css
@@ -1,3 +1,12 @@
+.card {
+    max-width: 300px;
+    max-height: 380px;
+    border-radius: 4px;
+    background-color: #1b1b1b;
+    cursor: pointer;
+    transition: all 0.2s;
+}
+
 .card:hover {
     opacity: 0.8;
 }
