referenced database to view cars

--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -1,25 +1,66 @@
+* {
+    padding: 0;
+    margin: 0;
+}
+
 .home-container {
-    background-color: brown;
-}
-
-.nav-home {
-    background-color: aquamarine;
     display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    height: 3em;
+    flex-direction: column;
+    align-items: space-between;
+    max-width: 100vw;
+    max-height: 100vh;
+    background-color: purple;
 }
 
-.nav-home a {
-    margin: 0 1em;
+a {
     text-decoration: none;
 }
 
-.header-home {
-    background-color: blue;
+.nav-home {
+    order: 1;
+    align-self: stretch;
+    background-color: #212121;
+    text-align: right;
+    max-width: 100vw;
+    max-height: 3em;
 }
-.about-a .cars-a {
-    background-color: blueviolet;
+
+.nav-home a {
+    color: #aaa;
+    margin: 0 1em;
+}
+
+.header-home {
+    order: 2;
+    color: goldenrod;
+    text-align: center;
+    background-color: blue;
+    max-width: 100vw;
+    max-height: 6em;
+}
+
+.link-container {
+    order: 3;
+    display: inline-flex;
+    align-self: center;
+}
+
+.about-link {
+    order: 4;
+    color: red;
+    max-width: 300px;
+    max-height: 380px;
+}
+.about-link a {
+    max-width: 300px;
+    max-height: 380px;
+}
+.cars-link {
+    order: 5;
+    max-width: 300px;
+    max-height: 380px;
+}
+.cars-link {
     max-width: 300px;
     max-height: 380px;
 }
