all cars can get project info

--- a/client/src/styles/About.css
+++ b/client/src/styles/About.css
@@ -1,6 +1,12 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 .about-h1 {
     background-color: blueviolet;
 }
+
 .about-h3 {
     background-color: aqua;
 }
