--- a/client/src/styles/About.css
+++ b/client/src/styles/About.css
@@ -3,10 +3,27 @@
     padding: 0;
 }
 
-.about-h1 {
-    background-color: blueviolet;
+.about-page {
+    max-width: 900px;
+    margin: 0 auto;
+    padding: 20px;
 }
 
-.about-h3 {
-    background-color: aqua;
+.about-heading {
+    font-size: 28px;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+.about-description {
+    font-size: 18px;
+    line-height: 1.5;
+    margin-bottom: 30px;
+}
+
+.about-image {
+    max-width: 100%;
+    height: auto;
+    margin-bottom: 20px;
+    box-shadow: 0px 0px 5px #ccc;
 }
