--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -1,23 +1,29 @@
 * {
-    padding: 0;
+    box-sizing: border-box;
     margin: 0;
+    padding: 0;
 }
 
 .home-container {
     display: flex;
     flex-direction: column;
     align-items: space-between;
+    font-family: 'Roboto', sans-serif;
+    background-color: #f5f5f5;
+    color: #333;
     max-width: 100vw;
     max-height: 100vh;
-    background-color: purple;
 }
 
 a {
     text-decoration: none;
+    color: #333;
 }
 
 .nav-home {
     order: 1;
+    display: flex;
+    list-style: none;
     align-self: stretch;
     background-color: #212121;
     text-align: right;
@@ -26,17 +32,19 @@ a {
 }
 
 .nav-home a {
-    color: #aaa;
-    margin: 0 1em;
+    margin-left: 20px;
+    font-size: 18px;
+    font-weight: bold;
 }
 
 .header-home {
     order: 2;
-    color: goldenrod;
-    text-align: center;
-    background-color: blue;
-    max-width: 100vw;
-    max-height: 6em;
+    font-size: 64px;
+    font-weight: bold;
+    line-height: 1.2;
+    margin-bottom: 20px;
+    color: #fff;
+    text-shadow: 0px 0px 5px #000;
 }
 
 .link-container {
