--- a/client/src/styles/cardetail.css
+++ b/client/src/styles/cardetail.css
@@ -5,7 +5,23 @@
 }
 
 .create-project {
-    background-color: red;
     max-width: 100px;
     max-height: 100px;
+}
+
+.button-link {
+    display: inline-block;
+    padding: 12px 24px;
+    font-size: 18px;
+    font-weight: 500;
+    text-align: center;
+    text-decoration: none;
+    background-color: #007bff;
+    color: #fff;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+.button-link:hover {
+    background-color: #0056b3;
 }
