--- a/client/src/styles/Cars.css
+++ b/client/src/styles/Cars.css
@@ -4,6 +4,7 @@
 }
 
 .car-container {
+    background-color: #444444;
     display: flex;
     flex-direction: column;
     align-items: space-between;
