--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -9,7 +9,7 @@
     flex-direction: column;
     align-items: space-between;
     font-family: 'Roboto', sans-serif;
-    background-color: #f5f5f5;
+    background-color: #333333;
     color: #333;
     max-width: 100vw;
     max-height: 100vh;
@@ -32,6 +32,7 @@ a {
 }
 
 .nav-home a {
+    color: #fff;
     margin-left: 20px;
     font-size: 18px;
     font-weight: bold;
@@ -39,6 +40,7 @@ a {
 
 .header-home {
     order: 2;
+    text-align: center;
     font-size: 64px;
     font-weight: bold;
     line-height: 1.2;
