--- a/client/src/styles/Cards.css
+++ b/client/src/styles/Cards.css
@@ -1,13 +1,9 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-
 .card {
-    max-width: 300px;
-    max-height: 380px;
-    padding: 20px;
-    margin: 20px;
+    /* max-width: 300px;
+    max-height: 380px; */
+    /* padding: 20px; */
+    width: 100%;
+    /* margin: 20px; */
     border: 1px solid #e5e5e5;
     border-radius: 10px;
     text-decoration: none;
@@ -18,6 +14,7 @@
     background-color: #fff;
     box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease;
+    overflow: hidden;
 }
 
 .card:hover {
@@ -26,14 +23,18 @@
 }
 
 .card .img-wrapper {
-    width: auto;
+    /* width: auto; */
 }
 
 .card img {
-    width: 100%;
+    width: 15em;
     height: 200px;
 }
 
 .card .info-wrapper {
     padding: 1em;
+}
+
+.cars-card {
+    margin: 0 2px 0 2px;
 }
