--- a/client/src/styles/Cars.css
+++ b/client/src/styles/Cars.css
@@ -1,16 +1,12 @@
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
 .car-container {
-    background-color: #444444;
+    background-color: grey;
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
     align-items: space-between;
+    overflow: scroll;
     max-width: 100vw;
     max-height: 100vh;
+    margin: 0 auto;
 }
 
 .nav-home {
@@ -24,11 +20,17 @@
 
 .cars-a {
     order: 2;
-    max-width: 300px;
-    max-height: 380px;
+    margin: 2em;
+    /* max-width: 100%; */
+    /* max-height: 380px; */
 }
 
-.cars-s a {
-    max-width: 300px;
+.cars-a a {
+    display: flex;
+    /* border: 1px solid black; */
+    /* background-color: black; */
+    border-radius: 20px;
+    /* max-width: 300px; */
+    width: 100%;
     max-height: 380px;
 }
