--- a/client/src/styles/cardetail.css
+++ b/client/src/styles/cardetail.css
@@ -15,9 +15,15 @@
     border-radius: 5px;
 }
 
+.button-div {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
 .button-link {
     display: inline-block;
-    padding: 12px 24px;
+    padding: 8px 6px;
     font-size: 18px;
     font-weight: 500;
     text-align: center;
@@ -26,6 +32,9 @@
     color: #fff;
     border-radius: 5px;
     transition: background-color 0.3s ease;
+    width: 20%;
+    border-radius: 0 0 20px 20px;
+    cursor: pointer;
 }
 
 .button-link:hover {
