--- a/client/src/styles/Cars.css
+++ b/client/src/styles/Cars.css
@@ -1,36 +1,43 @@
 .car-container {
-    background-color: grey;
     display: flex;
     flex-wrap: wrap;
-    align-items: space-between;
-    overflow: scroll;
-    max-width: 100vw;
-    max-height: 100vh;
-    margin: 0 auto;
+    justify-content: center;
+    align-items: center;
+    margin: 2rem;
 }
 
-.nav-home {
-    order: 1;
-    align-self: stretch;
-    background-color: #212121;
-    text-align: right;
-    max-width: 100vw;
-    max-height: 3em;
+.button-div {
+    text-align: center;
+    margin-bottom: 2rem;
+}
+
+.button-link {
+    display: inline-block;
+    padding: 1rem 2rem;
+    background-color: #0d6efd;
+    color: #fff;
+    border-radius: 5px;
+    text-decoration: none;
+    font-size: 1.2rem;
+    font-weight: bold;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.button-link:hover {
+    background-color: #0b5ed7;
 }
 
 .cars-a {
-    order: 2;
-    margin: 2em;
-    /* max-width: 100%; */
-    /* max-height: 380px; */
+    margin: 1rem;
 }
 
-.cars-a a {
-    display: flex;
-    /* border: 1px solid black; */
-    /* background-color: black; */
-    border-radius: 20px;
-    /* max-width: 300px; */
-    width: 100%;
-    max-height: 380px;
+@media (max-width: 768px) {
+    .car-container {
+        margin: 1rem;
+    }
+
+    .button-div {
+        margin-bottom: 1rem;
+    }
 }
