--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -1,76 +1,67 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
 .home-container {
     display: flex;
     flex-direction: column;
-    align-items: space-between;
-    font-family: 'Roboto', sans-serif;
-    background-color: #333333;
-    color: #333;
-    max-width: 100vw;
-    max-height: 100vh;
-}
-
-a {
-    text-decoration: none;
-    color: #333;
-}
-
-.nav-home {
-    order: 1;
-    display: flex;
-    list-style: none;
-    align-self: stretch;
-    background-color: #212121;
-    text-align: right;
-    max-width: 100vw;
-    max-height: 3em;
-}
-
-.nav-home a {
-    color: #fff;
-    margin-left: 20px;
-    font-size: 18px;
-    font-weight: bold;
-}
-
-.header-home {
-    order: 2;
-    text-align: center;
-    font-size: 64px;
-    font-weight: bold;
-    line-height: 1.2;
-    margin-bottom: 20px;
-    color: #fff;
-    text-shadow: 0px 0px 5px #000;
+    align-items: center;
+    padding: 2em;
+    background-color: #f8f8f8;
+    height: 100vh;
 }
 
 .link-container {
-    order: 3;
-    display: inline-flex;
-    align-self: center;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 50em;
+    margin-top: 2em;
 }
 
-.about-link {
-    order: 4;
-    color: red;
-    max-width: 300px;
-    max-height: 380px;
-}
-.about-link a {
-    max-width: 300px;
-    max-height: 380px;
-}
+.about-link,
 .cars-link {
-    order: 5;
-    max-width: 300px;
-    max-height: 380px;
+    width: 48%;
 }
-.cars-link {
-    max-width: 300px;
-    max-height: 380px;
+
+.about-link .card,
+.cars-link .card {
+    cursor: pointer;
+    background-color: #ffffff;
+    border: 1px solid #dddddd;
+    border-radius: 5px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    transition: box-shadow 0.2s ease-in-out;
+}
+
+.about-link .card:hover,
+.cars-link .card:hover {
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+.about-link .card .img-wrapper img,
+.cars-link .card .img-wrapper img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    max-height: 10em;
+}
+
+.about-link .card .info-wrapper,
+.cars-link .card .info-wrapper {
+    padding: 1em;
+    display: flex;
+    flex-direction: column;
+}
+
+.about-link .card .info-wrapper h3,
+.cars-link .card .info-wrapper h3 {
+    margin: 0;
+    font-size: 1.5em;
+}
+
+.about-link .card .info-wrapper p,
+.cars-link .card .info-wrapper p {
+    margin: 0;
+    font-size: 1em;
+    color: #777777;
+    margin-top: 0.5em;
+    line-height: 1.5;
 }
