--- a/client/src/styles/app.css
+++ b/client/src/styles/app.css
@@ -4,6 +4,27 @@
 }
 
 .App {
-    width: 100vw;
-    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #f2f2f2;
+    min-height: 100vh;
+    font-family: 'Open Sans', sans-serif;
+    padding: 1em;
+}
+
+.nav-home {
+    width: 100%;
+    max-width: 1200px;
+    padding: 1em;
+}
+
+/* Style the Routes component */
+.Routes {
+    width: 100%;
+    max-width: 1200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 2em;
 }
