cleaned code & updated read me

--- a/client/src/styles/carform.css
+++ b/client/src/styles/carform.css
@@ -25,7 +25,7 @@ input[type='text'] {
 }
 
 button[type='submit'] {
-    background-color: #268bcf;
+    background-color: #4caf50;
     color: white;
     padding: 8px 20px;
     border: none;
