--- a/client/src/styles/commentform.css
+++ b/client/src/styles/commentform.css
@@ -22,7 +22,7 @@ textarea {
 }
 
 button {
-    background-color: #1c6ea4;
+    background-color: #4caf50;
     border: none;
     color: white;
     padding: 0.5em 1em;
